# task-tracker-mcp

./: Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/agent/: schemas.py
src/mcp_server/: main.py  mcp_client.py  mcp_rest_service.py  mcp_service.py  mcp_service_lowlevel.py
src/task_tracker/: config.py  database.py  schemas.py  tasks.py  tree.py
tests/: test_database.py  test_mcp_tools.py
